--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,6 +7,8 @@ target 'ContactList' do
   config = use_native_modules!
 
   use_react_native!(:path => config["reactNativePath"])
+  
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
   target 'ContactListTests' do
     inherit! :complete
